--- a/#source/html/callback-modal.html
+++ b/#source/html/callback-modal.html
@@ -1,6 +1,6 @@
 <div class="callback-modal-fade modal-fade">
 	<div class="callback-modal modal">
-		<a class="modal-close" href="#"><img src="/img/icon/modal_close.png" alt=""></a>
+		<a class="modal-close" href="#"><img src="img/icon/modal_close.png" alt=""></a>
 		<div class="callback-modal__body modal__body">
 			<div class="callback-modal__title modal__title">
 				Заполните поля ниже и мы <span>перезвоним вам</span>, чтобы ответить на все вопросы
