--- a/#source/html/certificates.html
+++ b/#source/html/certificates.html
@@ -6,22 +6,22 @@
 		<div class="certificates-slider owl-carousel">
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 		</div>
