--- a/#source/html/find-out-the-price-modal.html
+++ b/#source/html/find-out-the-price-modal.html
@@ -1,6 +1,6 @@
 <div class="find-out-the-price-modal-fade modal-fade">
 	<div class="find-out-the-price-modal modal">
-		<a class="modal-close" href="#"><img src="/img/icon/modal_close.png" alt=""></a>
+		<a class="modal-close" href="#"><img src="img/icon/modal_close.png" alt=""></a>
 		<div class="find-out-the-price__body modal__body">
 			<div class="find-out-the-price__title modal__title">
 				Заполните поля ниже и мы <span>перезвоним вам</span> для уточнения цены
