--- a/#source/html/gift.html
+++ b/#source/html/gift.html
@@ -6,7 +6,7 @@
 		<div class="gift__selection selection-gift">
 			<div class="selection-gift__element selection-gift__element--first">
 				<div class="selection-gift__image">
-					<img src="/img/content/cE85aKwXrCNQ.png" alt="">
+					<img src="img/content/cE85aKwXrCNQ.png" alt="">
 				</div>
 				<div class="selection-gift__text">Весенняя мойка окон</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -16,7 +16,7 @@
 			</div>
 			<div class="selection-gift__element selection-gift__element--second">
 				<div class="selection-gift__image">
-					<img src="/img/content/u.png" alt="">
+					<img src="img/content/u.png" alt="">
 				</div>
 				<div class="selection-gift__text">Генеральная уборка при заходе на объект</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -26,7 +26,7 @@
 			</div>
 			<div class="selection-gift__element selection-gift__element--third">
 				<div class="selection-gift__image">
-					<img src="/img/content/green-home-cleaning-tips-1.png" alt="">
+					<img src="img/content/green-home-cleaning-tips-1.png" alt="">
 				</div>
 				<div class="selection-gift__text">Химчистка мягкой мебели</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -38,7 +38,7 @@
 	</div>
 	<div class="gift__callback callback-gift callback">
 		<div class="callback-gift__image callback__image">
-			<img src="/img/content/gift_PNG5946.png" alt="">
+			<img src="img/content/gift_PNG5946.png" alt="">
 		</div>
 		<div class="callback__title">
 			Вы выбрали<span>&nbsp"Химчистку мягкой мебели" в подарок</span>
