--- a/#source/html/price.html
+++ b/#source/html/price.html
@@ -2,7 +2,7 @@
 	<div class="content">
 		<div class="price__body">
 			<div class="price__image">
-				<img src="/img/content/price_image.jpg" alt="">
+				<img src="img/content/price_image.jpg" alt="">
 				<div class="price__shadow"></div>
 			</div>
 			<div class="price__info">
