--- a/#source/html/reviews.html
+++ b/#source/html/reviews.html
@@ -6,12 +6,12 @@
 		<div class="reviews-slider owl-carousel">
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -23,12 +23,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -40,12 +40,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -57,12 +57,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -74,12 +74,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
