--- a/card.html
+++ b/card.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
 	<title>Профессиональная клининговая компания</title>
-	<link rel="stylesheet" href="/css/style.css" />
-	<link rel="stylesheet" href="/css/mCustomScrollbar.min.css" />
-	<link rel="stylesheet" href="/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/mCustomScrollbar.min.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="favicon.png" type="image/png">
@@ -16,7 +16,7 @@
 		<span></span>
 	</div>
 	<a href="#top" class="arrow-to-top">
-		<img src="/img/icon/arrow-top.png" alt="">
+		<img src="img/icon/arrow-top.png" alt="">
 	</a>
 	<div class="wrapper">
 <header id="top" class="header header_card">
@@ -24,7 +24,7 @@
 		<div class="header__top">
 			<div class="header__logo">
 				<div class="logo">
-					<img src="/img/icon/logo.png" alt="" class="logo__image">
+					<img src="img/icon/logo.png" alt="" class="logo__image">
 					<div class="logo__label">лео</div>
 				</div>
 				<div class="header__region">Херсон и область</div>
@@ -47,13 +47,13 @@
 			</nav>
 			<div class="header__phones">
 				<a href="tel:0959999999" class="header__phonecall phonecall">
-					<img src="/img/icon/phone-receiver.png" alt="">
+					<img src="img/icon/phone-receiver.png" alt="">
 					<span>(095)&nbsp</span>
 					<span>999-99-99</span>
 				</a>
 				<div class="header__callback">
 					<button class="header__callback-button button button--color_white button--text-color_blue callback-modal-open">Обратный звонок</button>
-					<img src="/img/icon/phone-receiver-2.png" alt="">
+					<img src="img/icon/phone-receiver-2.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -68,7 +68,7 @@
 	</div>
 </header><div class="callback-modal-fade modal-fade">
 	<div class="callback-modal modal">
-		<a class="modal-close" href="#"><img src="/img/icon/modal_close.png" alt=""></a>
+		<a class="modal-close" href="#"><img src="img/icon/modal_close.png" alt=""></a>
 		<div class="callback-modal__body modal__body">
 			<div class="callback-modal__title modal__title">
 				Заполните поля ниже и мы <span>перезвоним вам</span>, чтобы ответить на все вопросы
@@ -93,7 +93,7 @@
 	<div class="content">
 		<div class="price__body">
 			<div class="price__image">
-				<img src="/img/content/price_image.jpg" alt="">
+				<img src="img/content/price_image.jpg" alt="">
 				<div class="price__shadow"></div>
 			</div>
 			<div class="price__info">
@@ -107,8 +107,8 @@
 	</div>
 </section><div class="callback-order-service callback">
 	<div class="callback-order-service__image callback__image">
-		<img src="/img/content/order_service_girl.png" alt="">
-		<img src="/img/content/order_service_girl_small.png" alt="">
+		<img src="img/content/order_service_girl.png" alt="">
+		<img src="img/content/order_service_girl_small.png" alt="">
 	</div>
 	<div class="callback__title">
 		Чтобы заказать услугу, <span>заполните форму ниже</span>
@@ -146,18 +146,18 @@
 			<div class="footer__contacts">
 				<address class="footer__address">
 					<div class="footer__phonecall phonecall">
-						<img src="/img/icon/phone_green.png" alt="">
+						<img src="img/icon/phone_green.png" alt="">
 						<a href="tel:0959999999">
 							<span>(095)&nbsp</span>
 							<span>999-99-99</span>
 						</a>
 					</div>
 					<div class="footer__email email">
-						<img src="/img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
+						<img src="img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
 					</div>
 				</address>
 				<div class="footer__location location">
-					<img src="/img/icon/location_green.png" alt="">
+					<img src="img/icon/location_green.png" alt="">
 					<a href="https://goo.gl/maps/5rgdv7Lu5Qv8SSGDA" target="_blank">Миколаївське шосе, 19, Херсон, Херсонська область, 73027</a>
 				</div>
 			</div>
@@ -165,10 +165,10 @@
 		</div>
 		<div class="footer__social-networks social-networks">
 			<a href="https://www.facebook.com/" target="_blank">
-				<img src="/img/icon/fb_green.png" alt="">
+				<img src="img/icon/fb_green.png" alt="">
 			</a>
 			<a href="https://www.instagram.com/" target="_blank">
-				<img src="/img/icon/instagram_green.png" alt="">
+				<img src="img/icon/instagram_green.png" alt="">
 			</a>
 		</div>
 	</div>
