--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
 	<title>Профессиональная клининговая компания</title>
-	<link rel="stylesheet" href="/css/style.css" />
-	<link rel="stylesheet" href="/css/mCustomScrollbar.min.css" />
-	<link rel="stylesheet" href="/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/mCustomScrollbar.min.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="favicon.png" type="image/png">
@@ -16,7 +16,7 @@
 		<span></span>
 	</div>
 	<a href="#top" class="arrow-to-top">
-		<img src="/img/icon/arrow-top.png" alt="">
+		<img src="img/icon/arrow-top.png" alt="">
 	</a>
 	<div class="wrapper">
 <header class="header header_main">
@@ -24,7 +24,7 @@
 		<div class="header__top">
 			<div class="header__logo">
 				<div class="logo">
-					<img src="/img/icon/logo.png" alt="" class="logo__image">
+					<img src="img/icon/logo.png" alt="" class="logo__image">
 					<div class="logo__label">лео</div>
 				</div>
 				<div class="header__region">Херсон и область</div>
@@ -47,13 +47,13 @@
 			</nav>
 			<div class="header__phones">
 				<a href="tel:4952304494" class="header__phonecall phonecall">
-					<img src="/img/icon/phone-receiver.png" alt="">
+					<img src="img/icon/phone-receiver.png" alt="">
 					<span>(095)&nbsp</span>
 					<span>999-99-99</span>
 				</a>
 				<div class="header__callback">
 					<button class="header__callback-button button button--color_white button--text-color_blue callback-modal-open">Обратный звонок</button>
-					<img src="/img/icon/phone-receiver-2.png" alt="">
+					<img src="img/icon/phone-receiver-2.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -64,19 +64,19 @@
 			<div class="header__reasons reasons">
 				<div class="reasons__body">
 					<div class="reasons__image">
-						<img src="/img/icon/coins.png" alt="">
+						<img src="img/icon/coins.png" alt="">
 					</div>
 					<div class="reasons__text">Лояльная ценовая политика для новых клиентов и особые условия для постоянных</div>
 				</div>
 				<div class="reasons__body">
 					<div class="reasons__image">
-						<img src="/img/icon/bars.png" alt="">
+						<img src="img/icon/bars.png" alt="">
 					</div>
 					<div class="reasons__text">Большой опыт работы на дорогих объектах «лакшери» сегмента. Нам доверяют лучшее</div>
 				</div>
 				<div class="reasons__body">
 					<div class="reasons__image">
-						<img src="/img/icon/cleaner.png" alt="">
+						<img src="img/icon/cleaner.png" alt="">
 					</div>
 					<div class="reasons__text">Опыт сотрудников от 2-х до 20-ти лет. Эффективная система наставничества, регулярно проходим мастер-классы и семинары</div>
 				</div>
@@ -85,7 +85,7 @@
 	</div>
 </header><div class="callback-modal-fade modal-fade">
 	<div class="callback-modal modal">
-		<a class="modal-close" href="#"><img src="/img/icon/modal_close.png" alt=""></a>
+		<a class="modal-close" href="#"><img src="img/icon/modal_close.png" alt=""></a>
 		<div class="callback-modal__body modal__body">
 			<div class="callback-modal__title modal__title">
 				Заполните поля ниже и мы <span>перезвоним вам</span>, чтобы ответить на все вопросы
@@ -114,7 +114,7 @@
 		<div class="gift__selection selection-gift">
 			<div class="selection-gift__element selection-gift__element--first">
 				<div class="selection-gift__image">
-					<img src="/img/content/cE85aKwXrCNQ.png" alt="">
+					<img src="img/content/cE85aKwXrCNQ.png" alt="">
 				</div>
 				<div class="selection-gift__text">Весенняя мойка окон</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -124,7 +124,7 @@
 			</div>
 			<div class="selection-gift__element selection-gift__element--second">
 				<div class="selection-gift__image">
-					<img src="/img/content/u.png" alt="">
+					<img src="img/content/u.png" alt="">
 				</div>
 				<div class="selection-gift__text">Генеральная уборка при заходе на объект</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -134,7 +134,7 @@
 			</div>
 			<div class="selection-gift__element selection-gift__element--third">
 				<div class="selection-gift__image">
-					<img src="/img/content/green-home-cleaning-tips-1.png" alt="">
+					<img src="img/content/green-home-cleaning-tips-1.png" alt="">
 				</div>
 				<div class="selection-gift__text">Химчистка мягкой мебели</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -146,7 +146,7 @@
 	</div>
 	<div class="gift__callback callback-gift callback">
 		<div class="callback-gift__image callback__image">
-			<img src="/img/content/gift_PNG5946.png" alt="">
+			<img src="img/content/gift_PNG5946.png" alt="">
 		</div>
 		<div class="callback__title">
 			Вы выбрали<span>&nbsp"Химчистку мягкой мебели" в подарок</span>
@@ -183,7 +183,7 @@
 				<p>1</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/runer-silhouette-running-fast.png" alt="">
+				<img src="img/icon/runer-silhouette-running-fast.png" alt="">
 			</div>
 		</div>
 		<div class="block-of-advantages__element">
@@ -196,7 +196,7 @@
 				<p>2</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/support.png" alt="">
+				<img src="img/icon/support.png" alt="">
 			</div>
 		</div>
 		<div class="block-of-advantages__element">
@@ -209,7 +209,7 @@
 				<p>3</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/hand-holding-up-a-financial-graph.png" alt="">
+				<img src="img/icon/hand-holding-up-a-financial-graph.png" alt="">
 			</div>
 		</div>
 		<div class="block-of-advantages__element">
@@ -222,7 +222,7 @@
 				<p>4</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/guarantee.png" alt="">
+				<img src="img/icon/guarantee.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -233,7 +233,7 @@
 		<div class="services__block-of-services block-of-services">
 			<div class="block-of-services__element">
 				<div class="block-of-services__image">
-					<img src="/img/content/services_img_1.jpg" alt="">
+					<img src="img/content/services_img_1.jpg" alt="">
 				</div>
 				<div class="block-of-services__info">
 					<div class="block-of-services__label">Профессиональная уборка</div>
@@ -243,7 +243,7 @@
 			</div>
 			<div class="block-of-services__element">
 				<div class="block-of-services__image">
-					<img src="/img/content/services_img_2.jpg" alt="">
+					<img src="img/content/services_img_2.jpg" alt="">
 				</div>
 				<div class="block-of-services__info">
 					<div class="block-of-services__label">Специализированные работы</div>
@@ -253,7 +253,7 @@
 			</div>
 			<div class="block-of-services__element">
 				<div class="block-of-services__image">
-					<img src="/img/content/services_img_3.jpg" alt="">
+					<img src="img/content/services_img_3.jpg" alt="">
 				</div>
 				<div class="block-of-services__info">
 					<div class="block-of-services__label">Эксплуатация</div>
@@ -271,12 +271,12 @@
 		<div class="reviews-slider owl-carousel">
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -288,12 +288,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -305,12 +305,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -322,12 +322,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -339,12 +339,12 @@
 			</div>
 			<div class="reviews-slider__slide">
 				<div class="reviews-slider__image">
-					<img src="/img/content/reviews_image.jpg" alt="">
+					<img src="img/content/reviews_image.jpg" alt="">
 				</div>
 				<div class="reviews-slider__rating">
 				</div>
 				<div class="reviews-slider__icon">
-					<img src="/img/icon/reviews_icon.png" alt="">
+					<img src="img/icon/reviews_icon.png" alt="">
 				</div>
 				<div class="reviews-slider__user-data">
 					<div class="reviews-slider__name">Анна Фёдорова</div>
@@ -362,19 +362,19 @@
 		<div class="clients__list block-of-clients">
 			<div class="block-of-clients__element">
 				<div class="block-of-clients__image">
-					<img src="/img/content/mail_logo.png" alt="">
+					<img src="img/content/mail_logo.png" alt="">
 				</div>
 				<div class="block-of-clients__text">Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание форм развития. Значимость этих проблем настолько очевидна, что консультация с широким активом позволяет выполнять важные задания по разработке направлений прогрессивного развития</div>
 			</div>
 			<div class="block-of-clients__element">
 				<div class="block-of-clients__image">
-					<img src="/img/content/mail_logo.png" alt="">
+					<img src="img/content/mail_logo.png" alt="">
 				</div>
 				<div class="block-of-clients__text">Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание форм развития. Значимость этих проблем настолько очевидна, что консультация с широким активом позволяет выполнять важные задания по разработке направлений прогрессивного развития</div>
 			</div>
 			<div class="block-of-clients__element">
 				<div class="block-of-clients__image">
-					<img src="/img/content/mail_logo.png" alt="">
+					<img src="img/content/mail_logo.png" alt="">
 				</div>
 				<div class="block-of-clients__text">Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание форм развития. Значимость этих проблем настолько очевидна, что консультация с широким активом позволяет выполнять важные задания по разработке направлений прогрессивного развития</div>
 			</div>
@@ -386,27 +386,27 @@
 	<div class="team__slider team-slider owl-carousel">
 		<div class="team-slider__slide">
 			<div class="team-slider__image">
-				<img src="/img/content/team_slider_1.jpg" alt="">
+				<img src="img/content/team_slider_1.jpg" alt="">
 			</div>
 			<div class="team-slider__label">ежедневная влажная уборка офисов для компании <span>"ВЫМПЕЛ"</span></div>
 		</div>
 		<div class="team-slider__slide">
 			<div class="team-slider__image">
-				<img src="/img/content/team_slider_1.jpg" alt="">
+				<img src="img/content/team_slider_1.jpg" alt="">
 			</div>
 			<div class="team-slider__label">ежедневная влажная уборка офисов для компании <span>"ВЫМПЕЛ"</span></div>
 		</div>
 		<div class="team-slider__slide">
 			<div class="team-slider__image">
-				<img src="/img/content/team_slider_1.jpg" alt="">
+				<img src="img/content/team_slider_1.jpg" alt="">
 			</div>
 			<div class="team-slider__label">ежедневная влажная уборка офисов для компании <span>"ВЫМПЕЛ"</span></div>
 		</div>
 	</div>
 </section><section class="calculation">
 	<div class="calculation__image">
-		<img src="/img/content/cost-calculation_girl.png" alt="">
-		<img src="/img/content/cost-calculation_girl_small.png" alt="">
+		<img src="img/content/cost-calculation_girl.png" alt="">
+		<img src="img/content/cost-calculation_girl_small.png" alt="">
 	</div>
 	<div class="calculation__title block-title"><span>Заполните поля ниже,</span> чтобы рассчитать стоимость уборки для вашего объекта</div>
 	<div class="calculation__description block-description">Наш сотрудник перезвонит вам сразу же, как получит сообщение и озвучит рассчеты</div>
@@ -455,18 +455,18 @@
 			<div class="footer__contacts">
 				<address class="footer__address">
 					<div class="footer__phonecall phonecall">
-						<img src="/img/icon/phone_green.png" alt="">
+						<img src="img/icon/phone_green.png" alt="">
 						<a href="tel:0959999999">
 							<span>(095)&nbsp</span>
 							<span>999-99-99</span>
 						</a>
 					</div>
 					<div class="footer__email email">
-						<img src="/img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
+						<img src="img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
 					</div>
 				</address>
 				<div class="footer__location location">
-					<img src="/img/icon/location_green.png" alt="">
+					<img src="img/icon/location_green.png" alt="">
 					<a href="https://goo.gl/maps/5rgdv7Lu5Qv8SSGDA" target="_blank">Миколаївське шосе, 19, Херсон, Херсонська область, 73027</a>
 				</div>
 			</div>
@@ -474,10 +474,10 @@
 		</div>
 		<div class="footer__social-networks social-networks">
 			<a href="https://www.facebook.com/" target="_blank">
-				<img src="/img/icon/fb_green.png" alt="">
+				<img src="img/icon/fb_green.png" alt="">
 			</a>
 			<a href="https://www.instagram.com/" target="_blank">
-				<img src="/img/icon/instagram_green.png" alt="">
+				<img src="img/icon/instagram_green.png" alt="">
 			</a>
 		</div>
 	</div>
