--- a/#source/html/advantages.html
+++ b/#source/html/advantages.html
@@ -13,7 +13,7 @@
 				<p>1</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/runer-silhouette-running-fast.png" alt="">
+				<img src="img/icon/runer-silhouette-running-fast.png" alt="">
 			</div>
 		</div>
 		<div class="block-of-advantages__element">
@@ -26,7 +26,7 @@
 				<p>2</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/support.png" alt="">
+				<img src="img/icon/support.png" alt="">
 			</div>
 		</div>
 		<div class="block-of-advantages__element">
@@ -39,7 +39,7 @@
 				<p>3</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/hand-holding-up-a-financial-graph.png" alt="">
+				<img src="img/icon/hand-holding-up-a-financial-graph.png" alt="">
 			</div>
 		</div>
 		<div class="block-of-advantages__element">
@@ -52,7 +52,7 @@
 				<p>4</p>
 			</div>
 			<div class="block-of-advantages__icon">
-				<img src="/img/icon/guarantee.png" alt="">
+				<img src="img/icon/guarantee.png" alt="">
 			</div>
 		</div>
 	</div>
