--- a/#source/html/find-price_specialized-works.html
+++ b/#source/html/find-price_specialized-works.html
@@ -3,7 +3,7 @@
 		<div class="find-price__body">
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-1.jpg" alt="">
+					<img src="img/content/price-1.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Уборка после<br> ремонта</div>
@@ -11,7 +11,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-2.jpg" alt="">
+					<img src="img/content/price-2.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Генеральная уборка<br> помещений</div>
@@ -19,7 +19,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-3.jpg" alt="">
+					<img src="img/content/price-3.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Шлифовка и<br> кристаллизация камня</div>
@@ -27,7 +27,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-4.jpg" alt="">
+					<img src="img/content/price-4.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Профессиональная<br> химчистка мебели</div>
@@ -35,7 +35,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-5.jpg" alt="">
+					<img src="img/content/price-5.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Химчистка<br> ковролина</div>
@@ -43,7 +43,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-6.jpg" alt="">
+					<img src="img/content/price-6.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Химчистка<br> ковров</div>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-7.jpg" alt="">
+					<img src="img/content/price-7.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Мойка<br> остекления</div>
@@ -59,7 +59,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-8.jpg" alt="">
+					<img src="img/content/price-8.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Мойка<br> фасадов</div>
@@ -67,7 +67,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-9.jpg" alt="">
+					<img src="img/content/price-9.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Очистка кровли<br> и крыш</div>
@@ -75,7 +75,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-10.jpg" alt="">
+					<img src="img/content/price-10.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Вывоз снега<br> и мусора</div>
@@ -83,7 +83,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-11.jpg" alt="">
+					<img src="img/content/price-11.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Промышленный<br> альпинизм</div>
@@ -91,7 +91,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-12.jpg" alt="">
+					<img src="img/content/price-12.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Аренда и замена<br> грязезащитных ковриков</div>
@@ -99,7 +99,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-13.jpg" alt="">
+					<img src="img/content/price-13.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Дезинфекция,дезинсекция,<br> дератизация</div>
@@ -107,7 +107,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-14.jpg" alt="">
+					<img src="img/content/price-14.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Уход за зелеными<br> насаждениями</div>
@@ -115,7 +115,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-15.jpg" alt="">
+					<img src="img/content/price-15.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Послестроительная<br> уборка</div>
@@ -123,7 +123,7 @@
 			</div>
 		</div>
 		<div class="find-price__down-arrow down-arrow">
-			<img src="/img/icon/down-arrow.png" alt="">
+			<img src="img/icon/down-arrow.png" alt="">
 		</div>
 	</div>
 </section>
