--- a/#source/html/footer.html
+++ b/#source/html/footer.html
@@ -8,18 +8,18 @@
 			<div class="footer__contacts">
 				<address class="footer__address">
 					<div class="footer__phonecall phonecall">
-						<img src="/img/icon/phone_green.png" alt="">
+						<img src="img/icon/phone_green.png" alt="">
 						<a href="tel:0959999999">
 							<span>(095)&nbsp</span>
 							<span>999-99-99</span>
 						</a>
 					</div>
 					<div class="footer__email email">
-						<img src="/img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
+						<img src="img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
 					</div>
 				</address>
 				<div class="footer__location location">
-					<img src="/img/icon/location_green.png" alt="">
+					<img src="img/icon/location_green.png" alt="">
 					<a href="https://goo.gl/maps/5rgdv7Lu5Qv8SSGDA" target="_blank">Миколаївське шосе, 19, Херсон, Херсонська область, 73027</a>
 				</div>
 			</div>
@@ -27,10 +27,10 @@
 		</div>
 		<div class="footer__social-networks social-networks">
 			<a href="https://www.facebook.com/" target="_blank">
-				<img src="/img/icon/fb_green.png" alt="">
+				<img src="img/icon/fb_green.png" alt="">
 			</a>
 			<a href="https://www.instagram.com/" target="_blank">
-				<img src="/img/icon/instagram_green.png" alt="">
+				<img src="img/icon/instagram_green.png" alt="">
 			</a>
 		</div>
 	</div>
