--- a/#source/html/header_main.html
+++ b/#source/html/header_main.html
@@ -3,7 +3,7 @@
 		<div class="header__top">
 			<div class="header__logo">
 				<div class="logo">
-					<img src="/img/icon/logo.png" alt="" class="logo__image">
+					<img src="img/icon/logo.png" alt="" class="logo__image">
 					<div class="logo__label">лео</div>
 				</div>
 				<div class="header__region">Херсон и область</div>
@@ -26,13 +26,13 @@
 			</nav>
 			<div class="header__phones">
 				<a href="tel:4952304494" class="header__phonecall phonecall">
-					<img src="/img/icon/phone-receiver.png" alt="">
+					<img src="img/icon/phone-receiver.png" alt="">
 					<span>(095)&nbsp</span>
 					<span>999-99-99</span>
 				</a>
 				<div class="header__callback">
 					<button class="header__callback-button button button--color_white button--text-color_blue callback-modal-open">Обратный звонок</button>
-					<img src="/img/icon/phone-receiver-2.png" alt="">
+					<img src="img/icon/phone-receiver-2.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -43,19 +43,19 @@
 			<div class="header__reasons reasons">
 				<div class="reasons__body">
 					<div class="reasons__image">
-						<img src="/img/icon/coins.png" alt="">
+						<img src="img/icon/coins.png" alt="">
 					</div>
 					<div class="reasons__text">Лояльная ценовая политика для новых клиентов и особые условия для постоянных</div>
 				</div>
 				<div class="reasons__body">
 					<div class="reasons__image">
-						<img src="/img/icon/bars.png" alt="">
+						<img src="img/icon/bars.png" alt="">
 					</div>
 					<div class="reasons__text">Большой опыт работы на дорогих объектах «лакшери» сегмента. Нам доверяют лучшее</div>
 				</div>
 				<div class="reasons__body">
 					<div class="reasons__image">
-						<img src="/img/icon/cleaner.png" alt="">
+						<img src="img/icon/cleaner.png" alt="">
 					</div>
 					<div class="reasons__text">Опыт сотрудников от 2-х до 20-ти лет. Эффективная система наставничества, регулярно проходим мастер-классы и семинары</div>
 				</div>
