--- a/#source/html/header_professional-cleaning.html
+++ b/#source/html/header_professional-cleaning.html
@@ -3,7 +3,7 @@
 		<div class="header__top">
 			<div class="header__logo">
 				<div class="logo">
-					<img src="/img/icon/logo.png" alt="" class="logo__image">
+					<img src="img/icon/logo.png" alt="" class="logo__image">
 					<div class="logo__label">лео</div>
 				</div>
 				<div class="header__region">Херсон и область</div>
@@ -26,13 +26,13 @@
 			</nav>
 			<div class="header__phones">
 				<a href="tel:4952304494" class="header__phonecall phonecall">
-					<img src="/img/icon/phone-receiver.png" alt="">
+					<img src="img/icon/phone-receiver.png" alt="">
 					<span>(095)&nbsp</span>
 					<span>999-99-99</span>
 				</a>
 				<div class="header__callback">
 					<button class="header__callback-button button button--color_white button--text-color_blue callback-modal-open">Обратный звонок</button>
-					<img src="/img/icon/phone-receiver-2.png" alt="">
+					<img src="img/icon/phone-receiver-2.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -48,7 +48,7 @@
 			<div class="header__mini-advantages mini-advantages">
 				<div class="mini-advantages__element">
 					<div class="mini-advantages__image">
-						<img src="/img/icon/24-hours-support.png" alt="">
+						<img src="img/icon/24-hours-support.png" alt="">
 					</div>
 					<div class="mini-advantages__text">
 						Мы наводим порядок на ваших объектах 24/7
@@ -56,7 +56,7 @@
 				</div>
 				<div class="mini-advantages__element">
 					<div class="mini-advantages__image">
-						<img src="/img/icon/wiping-swipe-for-floors.png" alt="">
+						<img src="img/icon/wiping-swipe-for-floors.png" alt="">
 					</div>
 					<div class="mini-advantages__text">
 						Профессиональное оборудование и безопасные хим. средства
@@ -64,7 +64,7 @@
 				</div>
 				<div class="mini-advantages__element">
 					<div class="mini-advantages__image">
-						<img src="/img/icon/cleaning.png" alt="">
+						<img src="img/icon/cleaning.png" alt="">
 					</div>
 					<div class="mini-advantages__text">
 						Обслуживаем объекты любого размера и уровня
