--- a/specialized-works.html
+++ b/specialized-works.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
 	<title>Профессиональная клининговая компания</title>
-	<link rel="stylesheet" href="/css/style.css" />
-	<link rel="stylesheet" href="/css/mCustomScrollbar.min.css" />
-	<link rel="stylesheet" href="/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/mCustomScrollbar.min.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link rel="shortcut icon" href="favicon.png" type="image/png">
@@ -16,7 +16,7 @@
 		<span></span>
 	</div>
 	<a href="#top" class="arrow-to-top">
-		<img src="/img/icon/arrow-top.png" alt="">
+		<img src="img/icon/arrow-top.png" alt="">
 	</a>
 	<div class="wrapper">
 <header class="header header_professional-cleaning">
@@ -24,7 +24,7 @@
 		<div class="header__top">
 			<div class="header__logo">
 				<div class="logo">
-					<img src="/img/icon/logo.png" alt="" class="logo__image">
+					<img src="img/icon/logo.png" alt="" class="logo__image">
 					<div class="logo__label">лео</div>
 				</div>
 				<div class="header__region">Херсон и область</div>
@@ -47,13 +47,13 @@
 			</nav>
 			<div class="header__phones">
 				<a href="tel:4952304494" class="header__phonecall phonecall">
-					<img src="/img/icon/phone-receiver.png" alt="">
+					<img src="img/icon/phone-receiver.png" alt="">
 					<span>(095)&nbsp</span>
 					<span>999-99-99</span>
 				</a>
 				<div class="header__callback">
 					<button class="header__callback-button button button--color_white button--text-color_blue callback-modal-open">Обратный звонок</button>
-					<img src="/img/icon/phone-receiver-2.png" alt="">
+					<img src="img/icon/phone-receiver-2.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -69,7 +69,7 @@
 			<div class="header__mini-advantages mini-advantages">
 				<div class="mini-advantages__element">
 					<div class="mini-advantages__image">
-						<img src="/img/icon/24-hours-support.png" alt="">
+						<img src="img/icon/24-hours-support.png" alt="">
 					</div>
 					<div class="mini-advantages__text">
 						Мы наводим порядок на ваших объектах 24/7
@@ -77,7 +77,7 @@
 				</div>
 				<div class="mini-advantages__element">
 					<div class="mini-advantages__image">
-						<img src="/img/icon/vacuum_cleaner.png" alt="">
+						<img src="img/icon/vacuum_cleaner.png" alt="">
 					</div>
 					<div class="mini-advantages__text">
 						Более 500 единиц моечной техники
@@ -85,7 +85,7 @@
 				</div>
 				<div class="mini-advantages__element">
 					<div class="mini-advantages__image">
-						<img src="/img/icon/graduate_diploma.png" alt="">
+						<img src="img/icon/graduate_diploma.png" alt="">
 					</div>
 					<div class="mini-advantages__text">
 						Только сертифицированные европейские моющие средства
@@ -96,7 +96,7 @@
 	</div>
 </header><div class="callback-modal-fade modal-fade">
 	<div class="callback-modal modal">
-		<a class="modal-close" href="#"><img src="/img/icon/modal_close.png" alt=""></a>
+		<a class="modal-close" href="#"><img src="img/icon/modal_close.png" alt=""></a>
 		<div class="callback-modal__body modal__body">
 			<div class="callback-modal__title modal__title">
 				Заполните поля ниже и мы <span>перезвоним вам</span>, чтобы ответить на все вопросы
@@ -118,7 +118,7 @@
 	</div>
 </div><div class="find-out-the-price-modal-fade modal-fade">
 	<div class="find-out-the-price-modal modal">
-		<a class="modal-close" href="#"><img src="/img/icon/modal_close.png" alt=""></a>
+		<a class="modal-close" href="#"><img src="img/icon/modal_close.png" alt=""></a>
 		<div class="find-out-the-price__body modal__body">
 			<div class="find-out-the-price__title modal__title">
 				Заполните поля ниже и мы <span>перезвоним вам</span> для уточнения цены
@@ -144,7 +144,7 @@
 		<div class="find-price__body">
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-1.jpg" alt="">
+					<img src="img/content/price-1.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Уборка после<br> ремонта</div>
@@ -152,7 +152,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-2.jpg" alt="">
+					<img src="img/content/price-2.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Генеральная уборка<br> помещений</div>
@@ -160,7 +160,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-3.jpg" alt="">
+					<img src="img/content/price-3.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Шлифовка и<br> кристаллизация камня</div>
@@ -168,7 +168,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-4.jpg" alt="">
+					<img src="img/content/price-4.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Профессиональная<br> химчистка мебели</div>
@@ -176,7 +176,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-5.jpg" alt="">
+					<img src="img/content/price-5.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Химчистка<br> ковролина</div>
@@ -184,7 +184,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-6.jpg" alt="">
+					<img src="img/content/price-6.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Химчистка<br> ковров</div>
@@ -192,7 +192,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-7.jpg" alt="">
+					<img src="img/content/price-7.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Мойка<br> остекления</div>
@@ -200,7 +200,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-8.jpg" alt="">
+					<img src="img/content/price-8.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Мойка<br> фасадов</div>
@@ -208,7 +208,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-9.jpg" alt="">
+					<img src="img/content/price-9.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Очистка кровли<br> и крыш</div>
@@ -216,7 +216,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-10.jpg" alt="">
+					<img src="img/content/price-10.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Вывоз снега<br> и мусора</div>
@@ -224,7 +224,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-11.jpg" alt="">
+					<img src="img/content/price-11.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Промышленный<br> альпинизм</div>
@@ -232,7 +232,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-12.jpg" alt="">
+					<img src="img/content/price-12.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Аренда и замена<br> грязезащитных ковриков</div>
@@ -240,7 +240,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-13.jpg" alt="">
+					<img src="img/content/price-13.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Дезинфекция,дезинсекция,<br> дератизация</div>
@@ -248,7 +248,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-14.jpg" alt="">
+					<img src="img/content/price-14.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Уход за зелеными<br> насаждениями</div>
@@ -256,7 +256,7 @@
 			</div>
 			<div class="find-price__element">
 				<div class="find-price__image">
-					<img src="/img/content/price-15.jpg" alt="">
+					<img src="img/content/price-15.jpg" alt="">
 					<div class="find-price__shadow"></div>
 				</div>
 				<div class="find-price__label">Послестроительная<br> уборка</div>
@@ -264,7 +264,7 @@
 			</div>
 		</div>
 		<div class="find-price__down-arrow down-arrow">
-			<img src="/img/icon/down-arrow.png" alt="">
+			<img src="img/icon/down-arrow.png" alt="">
 		</div>
 	</div>
 </section><section class="certificates">
@@ -275,22 +275,22 @@
 		<div class="certificates-slider owl-carousel">
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 			<div class="certificates-slider__slide">
 				<div class="certificates-slider__image">
-					<img src="/img/content/Certificate.jpg" alt="">
+					<img src="img/content/Certificate.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -300,28 +300,28 @@
 		<div class="list-of-services__body">
 			<div class="list-of-services__element">
 				<div class="list-of-services__image">
-					<img src="/img/content/list-of-services-img4.jpg" alt="">
+					<img src="img/content/list-of-services-img4.jpg" alt="">
 				</div>
 				<div class="list-of-services__text">Ежедневная комплексная уборка помещений</div>
 				<button class="list-of-services__button button button--color_blue button--text-color_white price-modal-open">Узнать цену</button>
 			</div>
 			<div class="list-of-services__element">
 				<div class="list-of-services__image">
-					<img src="/img/content/list-of-services-img3.jpg" alt="">
+					<img src="img/content/list-of-services-img3.jpg" alt="">
 				</div>
 				<div class="list-of-services__text">Генеральная уборка любых помещений</div>
 				<button class="list-of-services__button button button--color_blue button--text-color_white price-modal-open">Узнать цену</button>
 			</div>
 			<div class="list-of-services__element">
 				<div class="list-of-services__image">
-					<img src="/img/content/list-of-services-img2.jpg" alt="">
+					<img src="img/content/list-of-services-img2.jpg" alt="">
 				</div>
 				<div class="list-of-services__text">Уборка территории</div>
 				<button class="list-of-services__button button button--color_blue button--text-color_white price-modal-open">Узнать цену</button>
 			</div>
 			<div class="list-of-services__element">
 				<div class="list-of-services__image">
-					<img src="/img/content/list-of-services-img1.jpg" alt="">
+					<img src="img/content/list-of-services-img1.jpg" alt="">
 				</div>
 				<div class="list-of-services__text">Сезонное мытье окон</div>
 				<button class="list-of-services__button button button--color_blue button--text-color_white price-modal-open">Узнать цену</button>
@@ -336,7 +336,7 @@
 		<div class="gift__selection selection-gift">
 			<div class="selection-gift__element selection-gift__element--first">
 				<div class="selection-gift__image">
-					<img src="/img/content/cE85aKwXrCNQ.png" alt="">
+					<img src="img/content/cE85aKwXrCNQ.png" alt="">
 				</div>
 				<div class="selection-gift__text">Весенняя мойка окон</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -346,7 +346,7 @@
 			</div>
 			<div class="selection-gift__element selection-gift__element--second">
 				<div class="selection-gift__image">
-					<img src="/img/content/u.png" alt="">
+					<img src="img/content/u.png" alt="">
 				</div>
 				<div class="selection-gift__text">Генеральная уборка при заходе на объект</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -356,7 +356,7 @@
 			</div>
 			<div class="selection-gift__element selection-gift__element--third">
 				<div class="selection-gift__image">
-					<img src="/img/content/green-home-cleaning-tips-1.png" alt="">
+					<img src="img/content/green-home-cleaning-tips-1.png" alt="">
 				</div>
 				<div class="selection-gift__text">Химчистка мягкой мебели</div>
 				<div class="selection-gift__radio-button button button--color_green button--text-color_white">
@@ -368,7 +368,7 @@
 	</div>
 	<div class="gift__callback callback-gift callback">
 		<div class="callback-gift__image callback__image">
-			<img src="/img/content/gift_PNG5946.png" alt="">
+			<img src="img/content/gift_PNG5946.png" alt="">
 		</div>
 		<div class="callback__title">
 			Вы выбрали<span>&nbsp"Химчистку мягкой мебели" в подарок</span>
@@ -407,18 +407,18 @@
 			<div class="footer__contacts">
 				<address class="footer__address">
 					<div class="footer__phonecall phonecall">
-						<img src="/img/icon/phone_green.png" alt="">
+						<img src="img/icon/phone_green.png" alt="">
 						<a href="tel:0959999999">
 							<span>(095)&nbsp</span>
 							<span>999-99-99</span>
 						</a>
 					</div>
 					<div class="footer__email email">
-						<img src="/img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
+						<img src="img/icon/email_green.png" alt=""><a href="mailto:yurii.markovskyi@gmail.com">yurii.markovskyi@gmail.com</a>
 					</div>
 				</address>
 				<div class="footer__location location">
-					<img src="/img/icon/location_green.png" alt="">
+					<img src="img/icon/location_green.png" alt="">
 					<a href="https://goo.gl/maps/5rgdv7Lu5Qv8SSGDA" target="_blank">Миколаївське шосе, 19, Херсон, Херсонська область, 73027</a>
 				</div>
 			</div>
@@ -426,10 +426,10 @@
 		</div>
 		<div class="footer__social-networks social-networks">
 			<a href="https://www.facebook.com/" target="_blank">
-				<img src="/img/icon/fb_green.png" alt="">
+				<img src="img/icon/fb_green.png" alt="">
 			</a>
 			<a href="https://www.instagram.com/" target="_blank">
-				<img src="/img/icon/instagram_green.png" alt="">
+				<img src="img/icon/instagram_green.png" alt="">
 			</a>
 		</div>
 	</div>
